# identificador_gestos

esp32/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32/main/: .fuse_hidden0005e72b00000070  CMakeLists.txt  image_sender.c  image_sender.h  led_control.c  led_control.h  main.c  server_connection.c  server_connection.h  wifi_connection.c  wifi_connection.h
server/: FingerCounter.py  HandTrackingModule.py  espServer.py
